--- a/docs/_includes/mathjax.html
+++ b/docs/_includes/mathjax.html
@@ -10,6 +10,8 @@
         ['\\[', '\\]']
       ],
       processEscapes: true,
+      maxBuffer: 10 * 1024,
+      maxMacros: 5000,
     },
   };
 </script>
