--- a/docs/_sass/_theorem.scss
+++ b/docs/_sass/_theorem.scss
@@ -5,18 +5,23 @@
     margin: 12px 0;
     font-style: italic;
     text-align: justify;
-    background-color: #{$pink-color-light};
+    transition: transform .2s; /* Animation */
+    background-color: #{$light-cyan-color};
 }
 .theorem:before {
     content: "Theorem. ";
     font-weight: bold;
     font-style: normal;
 }
+.theorem:hover {
+    transform: scale(1.2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  }
 .lemma {
     display: block;
     margin: 12px 0;
     font-style: italic;
     text-align: justify;
+    transition: transform .2s; /* Animation */
     background-color: #{$grey-color-light};
 }
 .lemma:before {
@@ -24,6 +29,9 @@
     font-weight: bold;
     font-style: normal;
 }
+.lemma:hover {
+    transform: scale(1.2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  }
 .proof {
     display: block;
     margin: 12px 0;
